[package]
name = "yolo_keyword"
version = "0.1.0"
authors = ["leo60228 <leo@60228.dev>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/leo60228/yolo_keyword.git"
homepage = "https://github.com/leo60228/yolo_keyword"
description = "Adds the yolo keyword"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
